2007-11-04  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c: Use null "treearea" element for
	treeview owner-draw area instead of "client", to avoid
	nameclash with Notebook.client element (this was causing 
	sizing anomalies in XP theme, and introduced extraneous
	padding).
	* generic/ttk/ttkDefaultTheme.c: Treeitem.indicator element 
	needs left margin now.

2007-11-04  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXMenus.c: add "Run Widget Demo" menu item to the
	default Edit menu along with associated carbon event handler enabling
	the item only if demo files are installed; cleanup handling of "About"
	and "Source" menu items.

	* library/bgerror.tcl:		fix background of detail text on Aqua.

	* library/console.tcl:		add accelerators and fix Aqua bindings
					of the new font size menu items.

	* library/demos/mclist.tcl:	Aqua GOOBE.
	* library/demos/tree.tcl:
	* library/demos/ttknote.tcl:
	* library/demos/widget:

	* doc/chooseDirectory.n:	remove/correct obsolete Mac OS 9-era
	* doc/getOpenFile.n:		information.
	* doc/menu.n:

	* macosx/tkMacOSXEvent.c (TkMacOSXProcessCommandEvent): fix boolean arg
	
	* macosx/Wish.xcodeproj/project.pbxproj: add new demo file.
	* macosx/Wish.xcode/project.pbxproj:

2007-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/console.tcl: Add menu item and key binding to adjust font.

2007-11-02  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/mclist.tcl: Added a demo of how to do a multi-column
	sortable listbox.

2007-11-02  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* library/msgbox.tcl: Made message dialog use Ttk widgets for better
	L&F.

	* library/tkfbox.tcl (::tk::dialog::file::CompleteEnt): Added <Tab>
	completion. [FRQ 805091]
	* library/tkfbox.tcl: Made file dialog use Ttk widgets for better L&F.

	* library/demos/sayings.tcl: Better resizing. [Bug 1822410]

2007-11-01  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
