@@ -1,3 +1,8 @@
+2007-11-05  Joe English  <jenglish@users.sourceforge.net>
+
+	* macosx/ttkMacOSXTheme.c(TreeitemLayout): Remove focus ring
+	from treeview items on OSX (problem reported by Kevin Walzer).
+
 2007-11-04  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkTreeview.c: Use null "treearea" element for
